# cam_wind

./: .gitignore  build_compile_jni8.bat  build_compile_vc142_jna.bat  build_compile_vc142_jni8.bat
cam_mon_cpp/: CMakeLists.txt  DESIGN.md  README.md  build_andcompile.bat  cammon_exports.txt  cammon_symbols.txt  plog_init_obj_symbols.txt
cam_mon_cpp/.github/prompts/: AGENTS.md.prompt.md
cam_mon_cpp/examples/: cam_controller_example.conf  cam_controller_example.cpp
cam_mon_cpp/scripts/: convert_detect_and_write_utf8_bom.ps1  convert_to_utf8_bom.ps1
cam_mon_cpp/src/: cam_ajf_lib.cpp  cam_ajf_lib.h  cam_controller.cpp  cam_controller.h  cammon_api.cpp  cammon_api.h  cammon_jni.cpp  client.cpp  load_settings.cpp  load_settings.h  multicast_receiver.cpp  multicast_receiver.h  plog_init.cpp  plog_init.h  protocol.cpp  protocol.h  server_simulator.cpp  status_listener.cpp  test_crosshair.cpp  test_multicast.cpp  test_protocol.cpp  test_ptz_control.cpp  test_servo_api.cpp
cam_mon_java/: README.md  dependency-reduced-pom.xml  pom.xml  sources.txt
cam_mon_java/src/main/java/com/marble/cammon/: CamMonLibrary.java  CamMonNative.java  Client.java  ClientLoop.java  CppClientTest.java  DebugClient.java  DllTest.java  IntegrationMain.java  IntegrationTestRunner.java  NativeLoader.java  PTZStatus.java  Protocol.java  ServerSimulator.java  TestListener.java  TestServoApi.java  UdpPing.java
cam_mon_java/src/test/java/com/marble/cammon/: CrosshairControlTest.java  PTZIntegrationTest.java  ProtocolIntegrationTest.java
